--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.USERNAME }}
+          username: ${{"kemsyt"}}
           password: ${{ secrets.ACCESS_CODE }}
 
       - name: Build Docker image
