--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,14 +13,22 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{  secrets.USERNAME  }}
+          username: ${{ secrets.USERNAME }}
           password: ${{ secrets.ACCESS_CODE }}
 
-      - name: Build Docker image
-        run: docker build -t my-image .
-
-      - name: Push Docker image
-        run: docker push my-image
+      - name: Build and push Docker image
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: my-image:latest
