--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,26 +1,43 @@
-name: Check Docker Repository Existence
+name: Docker Build and Push
 
 on:
   push:
     branches:
-      - main
+      - main 
 
 jobs:
-  check_repo:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check if Docker repository exists
-        id: check_repo
-        run: |
-          REPO_NAME="my-image"
-          USERNAME="your-dockerhub-username"
-          response=$(curl -s -o /dev/null -w "%{http_code}" https://hub.docker.com/v2/repositories/$USERNAME/$REPO_NAME/)
-          if [ $response -eq 200 ]; then
-            echo "Repository $REPO_NAME exists."
-          elif [ $response -eq 404 ]; then
-            echo "Repository $REPO_NAME does not exist."
-          else
-            echo "Failed to check repository existence with status code: $response"
-            exit 1
-          fi
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.ACCESS_CODE }}
+
+      - name: Build and push Docker image
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: my-image
+
+      - name: Check Docker Buildx output
+        run: echo "${{ steps.docker_build.outputs }}"
+
+      - name: List Docker images
+        run: docker images
+
+      - name: Debug GitHub context
+        run: echo "${{ toJson(github) }}"
